fixed spacing with paragraphs/divs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -132,11 +132,6 @@ code {
 }
 
 .text-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
   margin-top: 10px;
   font-size: 20px;
   flex-wrap: wrap;
@@ -158,13 +153,10 @@ code {
 }
 
 .text-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-left: 3px;
-  margin-right: 3px;
   font-size: 20px;
   transition: all 400ms ease;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 .link-container {
